# talk-data-to-me

./: .gitignore  README.md  demo.py  main.py  main_copy.py  pyproject.toml
agents/: commentator.py  crisis_supervisor.py  supervisor.py
commentator_agent/: .env.example  commentator.py  supervisor.py
crisis_response_agent/: .env.example  agent.py
crisis_response_agent/sub_agents/: crisis_response_team.py
local_agent/: agent.py
notebooks/: 1.0-jrw-gemma3n.py
tools/: broadcasting.py  crisis_tools.py  demo_tools.py
utils/: audio_player.py  gemma3n.py  stream_audio.py
